@@ -1,3 +1,8 @@
+2008-07-16	Nick Schermer <nick@xfce.org>
+
+	* dialogs/keyboard-settings/main.c, 
+	  dialogs/keyboard-settings/command-dialog.c: Fix compilation.
+
 2008-07-16	Jannis Pohlmann <jannis@xfce.org>
 
 	* dialogs/keyboard-settings/keyboard-dialog.glade: In the last commit
